fix: checkbox alignment

--- a/core_explore_keyword_app/static/core_explore_keyword_app/user/css/search/search.css
+++ b/core_explore_keyword_app/static/core_explore_keyword_app/user/css/search/search.css
@@ -42,7 +42,6 @@ ul.tagit li.tagit-choice-editable {
 }
 
 .panel-body .glyphicon {
-    line-height: inherit;
     top: inherit;
 }
 
@@ -70,4 +69,8 @@ ul.tagit li.tagit-choice-editable {
 
 .tools-menu a {
     display: contents !important;
+}
+
+span.fancytree-title {
+    width: 12em;
 }
